# erdb-vscode

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
debug-adapter/: Cargo.toml
debug-adapter/src/: main.rs
erdb/: run-erdb.sh
src/: extension.ts
