[package]
name = "debug-adapter"
version = "0.1.0"
authors = ["Blinningjr <nicke.l@telia.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt 		= { version = "0.3", default-features = false }
anyhow			= "1.0"
log			= "0.4"
simplelog		= "0.9"
debugserver-types	= "0.5"
serde_json		= "1.0"

